<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/import_criminal_data"
        android:id="@+id/menu_import_data"/>

    <item
        android:title="@string/export_criminal_data"
        android:id="@+id/menu_export_data"/>

    <item
        android:title="@string/last_added_criminal"
        android:id="@+id/menu_last_added_criminal"/>

    <item
        android:title="@string/admin_chat"
        android:id="@+id/menu_admin_chat"/>

    <item
        android:title="Contact Us"
        android:id="@+id/menu_contact_us"/>

    <item
        android:title="About Us"
        android:id="@+id/menu_about_us"/>

    <item
        android:title="Logout"
        android:id="@+id/menu_logout"/>

</menu>